Fix comment form props issue
- Change CommentSection call from articleId to postSlug and postTitle
- Remove debugging logs after identifying the root cause
- Fix 'Missing required fields' error in comment submission
- Comments should now work properly on article pages

--- a/blog/src/pages/blog/[slug].astro
+++ b/blog/src/pages/blog/[slug].astro
@@ -576,7 +576,7 @@ const pageDescription = article?.meta_description || article?.excerpt || 'Décou
         
         <!-- Comments Section -->
         <div class="mt-12">
-          <CommentSection articleId={article?.id} />
+          <CommentSection postSlug={article?.slug} postTitle={article?.title} />
         </div>
       </div>
     </div>
